[workspace]
members = ["litweb-cli"]

[package]
name = "litweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2.21"
jotdown = {git = "https://github.com/hellux/jotdown", branch = "spans2", default-features = false}
thiserror = "1.0.40"
